--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_map: any
   flutter_map_marker_cluster: any
   latlong: ^0.6.1
-  file_picker: ^1.4.2
+  file_picker: ^1.4.3+2
   gpx: ^0.0.3
 
 dev_dependencies:
